RESOLVED FIXED168731
MediaStreamSourceNode never receives audio from MockRealtimeAudioSourceMac.
https://bugs.webkit.org/show_bug.cgi?id=168731
Summary MediaStreamSourceNode never receives audio from MockRealtimeAudioSourceMac.
Jer Noble
Reported 2017-02-22 10:30:50 PST
MediaStreamSourceNode never receives audio from a getUserMedia() created stream
Attachments
Patch (5.71 KB, patch)
2017-02-22 10:38 PST, Jer Noble
no flags
Patch (5.63 KB, patch)
2017-02-22 10:50 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-22 10:38:26 PST
Jer Noble
Comment 2 2017-02-22 10:39:00 PST
Simon, here's some tests of the hum code.
Jer Noble
Comment 3 2017-02-22 10:50:21 PST
WebKit Commit Bot
Comment 4 2017-02-22 12:48:19 PST
Comment on attachment 302414 [details] Patch Clearing flags on attachment: 302414 Committed r212846: <http://trac.webkit.org/changeset/212846>
WebKit Commit Bot
Comment 5 2017-02-22 12:48:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.