Source/WebCore: MediaStreamSourceNode never receives audio from MockRealtimeAudioSourceMac. https://bugs.webkit.org/show_bug.cgi?id=168731

Reviewed by Eric Carlson.

Test: fast/mediastream/mock-media-source-webaudio.html

Because the audioSourceProvider can be created before the mock source is configured, explicitly configure the
source if necessary after creating the audioSourceProvider.

* platform/mediastream/mac/MockRealtimeAudioSourceMac.mm:
(WebCore::MockRealtimeAudioSourceMac::audioSourceProvider):

LayoutTests:
MediaStreamSourceNode never receives audio from a getUserMedia() created stream
https://bugs.webkit.org/show_bug.cgi?id=168731

Reviewed by Eric Carlson.

* fast/mediastream/mock-media-source-webaudio-expected.txt: Added.
* fast/mediastream/mock-media-source-webaudio.html: Added.


Canonical link: https://commits.webkit.org/185743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212846 268f45cc-cd09-0410-ab3c-d52691b4dbfc